# wezterm

./: .gitignore  Cargo.toml  init.sh
config/src/: keyassignment.rs  version.rs
gabrielfalcao/: .ackrc  .bash.fn.static  .bash_dbg_profile  .bash_history  .bash_profile  .bash_profile~  .bashrc  .bashrc-debug  .bashrc.env.static  .bashrc.static  .bashrc.static.2026-02-13.03-27-46.1770964066  .bashrc.static.2026-02-13.03-27-51.1770964071  .bashrc.static.2026-02-13.03-28-09.1770964089  .bashrc.static.2026-02-13.03-28-24.1770964104  .bashrc.static.sh.reb.sh  .bashrc_static.006982c9f9  .gitconfig  .gitconfig-ch4mb3rp0t@protonmail.ch  .gitconfig-gabriel@nacaolivre.org.ini  .gitconfig-gabriel@poems.codes  .gitconfig-gabrielteratos@gmail.com.ini  .gitconfig-mm-gabrielteratos@gmail.com.ini  .gitconfig-qrycuv@google.com  .gitconfig-wm@poems.codes.ini  .gitconfig2  .gitconfiglinux  .gitignore  .gitignoreglobal  .wezterm.lua
gabrielfalcao/.cargo/: config.toml
gabrielfalcao/.config/: ps1.toml
gabrielfalcao/.emacs.d/: .gitignore  generate-fake-eln.sh  init.el  install.el  tramp
gabrielfalcao/.shell.d/: .gitignore  0000000.sh  0000010-editors.sh  0000101-functions.sh  0000110-aliases.sh  0000110-env.sh  0001000-build-essential.sh  0001010-cryptoccur.sh  0010000-stercet.sh  1100011.sh  bash-wip-processes.sh  cc.py  entrypoint.sh  ghostty.version
gabrielfalcao/.ssh/: config
gabrielfalcao/projects/personal/biafix/: .gitignore  pyproject.toml
gabrielfalcao/projects/personal/biafix/src/biafix/: __init__.py
mux/src/: pane.rs
nix/: flake.nix
wezterm-font/src/: parser.rs
(+429 files in other folders)
