[project]
name = "biafix"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chamber Potts", email = "ch4mb3rp0t@protonmail.ch" }
]
requires-python = ">=3.11"
dependencies = [
    "autoflake>=2.3.3",
    "black>=26.5.1",
    "click>=8.4.2",
    "colorama>=0.4.6",
    "coloredlogs>=15.0.1",
    "isort>=8.0.1",
]

[project.scripts]
biafix = "biafix:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
]
